--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,16 @@
-beautifulsoup4==4.7.1
+beautifulsoup4==4.9.1
 blinker==1.4
-docutils==0.14
-feedgenerator==1.9
-Jinja2==2.10.1
-Markdown==3.1
+docutils==0.16
+feedgenerator==1.9.1
+Jinja2==2.11.2
+Markdown==3.2.2
 MarkupSafe==1.1.1
 olefile==0.46
-pelican==4.0.1
-Pillow==6.0.0
-Pygments==2.4.0
-python-dateutil==2.8.0
-pytz==2019.1
-six==1.12.0
-smartypants==2.0.1
-typogrify==2.0.7
-Unidecode==1.0.23
-webassets==0.12.1
+pelican==4.5.0
+Pillow==7.2.0
+Pygments==2.7.0
+python-dateutil==2.8.1
+pytz==2020.1
+six==1.15.0
+soupsieve==2.0.1
+Unidecode==1.1.1
